# exifrensc

./: .bak  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.bak
src/: db.rs  exifrensc_res.rc  macros.rs  main.rs  manifest.xml.in  resource.h  settings.sqlite  version.in  version.rc
