[package]
name = "exifrensc"
version = "0.3.0"
authors = ["Andrew Roach <afr69email-Github@yahoo.com>"]
edition = "2021"
description = "Program to rename image files using EXIF data and to also synch that with nikon side car files."
license = "GPL-2.0-or-later"

[dependencies.windows]
version = "0.35.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_System_Environment",
    "Win32_System_Com",
]


[build-dependencies]
embed-resource = "1.7.2"
chrono = "0.4.7"
datetime = "0.4.2"