[package]
name = "exifrensc"
version = "0.4.20221006"
authors = ["Andrew Roach <afr69email-Github@yahoo.com>"]
edition = "2021"
description = "Program to rename image files using EXIF data and to also synch that with nikon side car files."
license = "GPL-2.0-or-later"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
libc = "0.2"
chrono = "0.4.7"
rusqlite = {version="0.29.0",features = ["bundled"]}
kamadak-exif = "0.5"

[build-dependencies]
embed-resource = "1.7.2"
chrono = "0.4.7"
